--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--- INICIO DE ZONA NAVEGABLE-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <center><a class="navbar-brand inicio">Menú</a></center>
+          <a class="navbar-brand inicio">Menú</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
