--- a/secciones/lenceriafemenina/lenceriafemenina.html
+++ b/secciones/lenceriafemenina/lenceriafemenina.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lencería Femenina</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <!--- CABECERA-->
@@ -20,12 +21,24 @@
     <!--- FIN DE CABECERA-->
     <!--- INICIO DE ZONA NAVEGABLE-->
     <nav class="menu-container">
-        <div class="menu">
-        <div class="prod"><a href="/index.html">Productos</a></div>
-        <div class="promociones"><a href="secciones/promociones.html">Promociones</a></div>
-        <div class="sale"><a href="secciones/sale.html">Sale</a></div>
-        <div class="nosotros"><a href="secciones/nosotros.html">Nosotros</a></div>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand inicio">Menú</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#"></a>
+                  <a class="nav-link inicio" href="/index.html">Inicio</a>
+                  <a class="nav-link mediosdepago" href="/secciones/mdp.html">Medios de pago</a>
+                  <a class="nav-link sale" href="/secciones/sale.html">Sale</a>
+                  <a class="nav-link nosotros" href="/secciones/nosotros.html">Nosotros</a>
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </nav>
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
@@ -33,11 +46,11 @@
         <h1 class="nuestros-productos">Lencería Femenina</h1>
     <!-- INICIO DE PRODUCTOS-->
     <!-- LENCERIA-->
-    <div class="productos">
+    <div class="productos-femeninos">
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/lenceriafemenina/conjuntos.html">
-                    <img src="/imagenes/im5.jpg" alt="Conjuntos" width="200">
+                <a href="">
+                    <img src="/imagenes/conjuntos.png" alt="Conjuntos" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -46,40 +59,21 @@
         </div>
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/ropainteriormasculina.html">
-                    <img src="/imagenes/masculino.png" alt="Ropa interior masculina" width="200">
+                <a href="">
+                    <img src="/imagenes/sueltas.png" alt="Partes sueltas" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
-                <p class="producto-nombre">Ropa interior masculina</p>
+                <p class="producto-nombre">Partes sueltas</p>
             </div>
-        </div>
-        <div class="producto">
-            <div class="producto-blanco">
-                <a href="/secciones/pijamas.html">
-                    <img src="/imagenes/pijamas.png" alt="Pijamas" width="200">
-                </a>
-             </div>
-            <div class="producto-informacion">
-                <p class="producto-nombre">Pijamas</p>
-            </div>
-        </div>
-        <div class="producto">
-            <div class="producto-blanco">
-                <a href="/secciones/trajesdebaño.html"><img src="/imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
-             </div>
-            <div class="producto-informacion">
-                <p class="producto-nombre">Trajes de baño</p>
-            </div>
-        </div>
-    </div>
     </main>
-    <!--- FIN DE SITIO PRINCIPAL-->
+    <!--- FIN DE PRODUCTOS-->
     <!-- PIE DE PAGINA-->
     <footer class="footer">
         <a href="https://www.instagram.com/latinbomb.ok/"><img src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png"/></a>
         <a href="https://goo.gl/maps/pz51JnkEkqwLFTvp7"><img src="https://img.icons8.com/external-kmg-design-flat-kmg-design/32/000000/external-map-map-and-navigation-kmg-design-flat-kmg-design-3.png"/ width="40px"></a>
         <a href="https://www.facebook.com/latinbomb.ok/"><img src="https://img.icons8.com/bubbles/50/000000/facebook-circled.png"/></a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
