--- a/secciones/mdp.html
+++ b/secciones/mdp.html
@@ -20,13 +20,23 @@
     </header>
     <!--- FIN DE CABECERA-->
     <!--- INICIO DE ZONA NAVEGABLE-->
-    <nav class="menu-container">
-        <div class="menu">
-        <div class="inicio"><a href="/index.html">Inicio</a></div>
-        <div class="mediosdepago"><a href="/secciones/mdp.html">Medios de pago</a></div>
-        <div class="sale"><a href="secciones/sale.html">Sale</a></div>
-        <div class="nosotros"><a href="/secciones/nosotros.html">Nosotros</a></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand inicio">Menú</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#"></a>
+            <a class="nav-link inicio" href="/index.html">Inicio</a>
+            <a class="nav-link mediosdepago" href="/secciones/mdp.html">Medios de pago</a>
+            <a class="nav-link sale" href="/secciones/sale.html">Sale</a>
+            <a class="nav-link nosotros" href="/secciones/nosotros.html">Nosotros</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+          </div>
         </div>
+      </div>
     </nav>
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
@@ -58,8 +68,6 @@
           <span class="visually-hidden">Next</span>
         </a>
       </div>
-   
-
     </div>
     </main>
     <!--- FIN DE SITIO PRINCIPAL-->
