--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <!--- CABECERA-->
@@ -19,14 +20,24 @@
     </header>
     <!--- FIN DE CABECERA-->
     <!--- INICIO DE ZONA NAVEGABLE-->
-    <nav class="menu-container">
-        <div class="menu">
-        <div class="inicio"><a href="/index.html">Inicio</a></div>
-        <div class="promociones"><a href="secciones/promociones.html">Promociones</a></div>
-        <div class="sale"><a href="secciones/sale.html">Sale</a></div>
-        <div class="nosotros"><a href="secciones/nosotros.html">Nosotros</a></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand inicio">Menú</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#"></a>
+              <a class="nav-link inicio" href="/index.html">Inicio</a>
+              <a class="nav-link mediosdepago" href="/secciones/mdp.html">Medios de pago</a>
+              <a class="nav-link sale" href="/secciones/sale.html">Sale</a>
+              <a class="nav-link nosotros" href="/secciones/nosotros.html">Nosotros</a>
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+            </div>
+          </div>
         </div>
-    </nav>
+      </nav>
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
     <main class="contenedor">
@@ -48,6 +59,6 @@
         <a href="https://goo.gl/maps/pz51JnkEkqwLFTvp7"><img src="https://img.icons8.com/external-kmg-design-flat-kmg-design/32/000000/external-map-map-and-navigation-kmg-design-flat-kmg-design-3.png"/ alt="Dirección en Google Maps" width="40px" class="maps"></a>
         <a href="https://www.facebook.com/latinbomb.ok/"><img src="https://img.icons8.com/bubbles/50/000000/facebook-circled.png"/ alt="Facebook" class="fb"></a>
     </footer>
-    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
