--- a/secciones/mdp.html
+++ b/secciones/mdp.html
@@ -12,7 +12,7 @@
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="/imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="./imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -50,13 +50,13 @@
         </ol>
         <div class="carousel-inner w-70">
           <div class="carousel-item active">
-            <img src="/imagenes/mp.png" class="d-block w-100" alt="Mercado Pago">
+            <img src="./imagenes/mp.png" class="d-block w-100" alt="Mercado Pago">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/tb.png" class="d-block w-100" alt="Transferencia">
+            <img src="./imagenes/tb.png" class="d-block w-100" alt="Transferencia">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/efect.png" class="d-block w-100" alt="Efectivo">
+            <img src="./imagenes/efect.png" class="d-block w-100" alt="Efectivo">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
