--- a/secciones/lenceriafemenina.html
+++ b/secciones/lenceriafemenina.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lencería Femenina</title>
-    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="/imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -50,7 +50,7 @@
         <div class="producto">
             <div class="producto-blanco">
                 <a href="">
-                    <img src="/imagenes/conjuntos.png" alt="Conjuntos" width="200">
+                    <img src="../imagenes/conjuntos.png" alt="Conjuntos" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -60,7 +60,7 @@
         <div class="producto">
             <div class="producto-blanco">
                 <a href="">
-                    <img src="/imagenes/sueltas.png" alt="Partes sueltas" width="200">
+                    <img src="../imagenes/sueltas.png" alt="Partes sueltas" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
