--- a/secciones/mdp.html
+++ b/secciones/mdp.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medios de Pago</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/backup/backup.css">
 </head>
 <body>
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="/imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -53,10 +53,10 @@
             <img src="." class="d-block w-100" alt="Mercado Pago">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/tb.png" class="d-block w-100" alt="Transferencia">
+            <img src="/imagenes/tb.png" class="d-block w-100" alt="Transferencia">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/efect.png" class="d-block w-100" alt="Efectivo">
+            <img src="/imagenes/efect.png" class="d-block w-100" alt="Efectivo">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
