Agregando listas, y nuevos html

--- a/secciones/mdp.html
+++ b/secciones/mdp.html
@@ -50,7 +50,7 @@
         </ol>
         <div class="carousel-inner w-70">
           <div class="carousel-item active">
-            <img src="." class="d-block w-100" alt="Mercado Pago">
+            <img src="/imagenes/mp.png" class="d-block w-100" alt="Mercado Pago">
           </div>
           <div class="carousel-item">
             <img src="/imagenes/tb.png" class="d-block w-100" alt="Transferencia">
@@ -72,7 +72,7 @@
     </main>
     <!--- FIN DE SITIO PRINCIPAL-->
     <aside class="whats-container">
-        <div class="whats"> <a href="https://wa.me/1155956251"><img src="../imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
+        <div class="whats"> <a href="https://wa.me/1155956251"><img src="/imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
         </div>
      </aside>
     <!-- PIE DE PAGINA-->
