--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- TRAJES DE BAÑO-->
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/trajesdebaño.html"><img src="/imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
+                <a href="/secciones/trajes-de-baño.html"><img src="/imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
              </div>
             <div class="producto-informacion">
                 <p class="producto-nombre">Trajes de baño</p>
