--- a/secciones/trajes-de-baño.html
+++ b/secciones/trajes-de-baño.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lencería Femenina</title>
+    <title>Trajes de bañp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -43,29 +43,48 @@
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
     <main class="contenedor">
-        <h1 class="nuestros-productos">Lencería Femenina</h1>
+        <h1 class="nuestros-productos">Conjuntos</h1>
     <!-- INICIO DE PRODUCTOS-->
-    <!-- LENCERIA-->
-    <div class="productos-femeninos">
-        <div class="producto">
-            <div class="producto-blanco">
-                <a href="/secciones/conjuntos.html">
-                    <img src="../imagenes/conjuntos.png" alt="Conjuntos" width="200">
-                </a>
-             </div>
-            <div class="producto-informacion">
-                <p class="producto-nombre">Conjuntos</p>
-            </div>
+    <!-- TRAJES DE BAÑO -->
+    <div class="producto">
+        <div class="producto-blanco">
+            <a href="/imagenes/im26.jpg"><img src="/imagenes/im26.jpg" alt="ART1" width="200"></a>
+         </div>
+        <div class="producto-informacion">
+            <p class="producto-nombre">ART1</p>
         </div>
-        <div class="producto">
-            <div class="producto-blanco">
-                <a href="/secciones/partes-sueltas.html">
-                    <img src="../imagenes/sueltas.png" alt="Partes sueltas" width="200">
-                </a>
-             </div>
-            <div class="producto-informacion">
-                <p class="producto-nombre">Partes sueltas</p>
-            </div>
+        <div class="producto-blanco">
+            <a href="/imagenes/im27.jpg"><img src="/imagenes/im27.jpg" alt="ART2" width="200"></a>
+         </div>
+        <div class="producto-informacion">
+            <p class="producto-nombre">ART2</p>
+        </div>
+        <div class="producto-blanco">
+            <a href="/imagenes/im28.jpg"><img src="/imagenes/im28.jpg" alt="ART3" width="200"></a>
+         </div>
+        <div class="producto-informacion">
+            <p class="producto-nombre">ART3</p>
+        </div>
+        <div class="producto-blanco">
+            <a href="/imagenes/im29.jpg"><img src="/imagenes/im29.jpg" alt="ART4" width="200"></a>
+         </div>
+        <div class="producto-informacion">
+            <p class="producto-nombre">ART4</p>
+        </div>
+        <div class="producto-blanco">
+            <a href="/imagenes/im30.jpg"><img src="/imagenes/im30.jpg" alt="ART2" width="200"></a>
+         </div>
+        <div class="producto-informacion">
+            <p class="producto-nombre">ART5</p>
+        </div>
+        <div class="producto-blanco">
+            <a href="/imagenes/im31.jpg"><img src="/imagenes/im31.jpg" alt="ART6" width="200"></a>
+         </div>
+        <div class="producto-informacion">
+            <p class="producto-nombre">ART6</p>
+        </div>
+</div>
+
     </main>
     <!--- FIN DE PRODUCTOS-->
     <!-- PIE DE PAGINA-->
