Nuevo html SALE, arreglo de rutas, y agregado de meta property, e icon

--- a/secciones/partes-sueltas.html
+++ b/secciones/partes-sueltas.html
@@ -43,42 +43,42 @@
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
     <main class="contenedor">
-        <h1 class="nuestros-productos">Conjuntos</h1>
+        <h1 class="nuestros-productos">Partes sueltas</h1>
     <!-- INICIO DE PRODUCTOS-->
     <!-- PARTES SUELTAS -->
     <div class="producto">
         <div class="producto-blanco">
-            <a href="/imagenes/im14.jpg"><img src="/imagenes/im14.jpg" alt="ART1" width="200"></a>
+            <a href="../imagenes/im14.jpg"><img src="../imagenes/im14.jpg" alt="ART1" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im15.jpg"><img src="/imagenes/im15.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im15.jpg"><img src="../imagenes/im15.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im16.jpg"><img src="/imagenes/im16.jpg" alt="ART3" width="200"></a>
+            <a href="../imagenes/im16.jpg"><img src="../imagenes/im16.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im17.jpg"><img src="/imagenes/im17.jpg" alt="ART4" width="200"></a>
+            <a href="../imagenes/im17.jpg"><img src="../imagenes/im17.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im18.jpg"><img src="/imagenes/im18.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im18.jpg"><img src="../imagenes/im18.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im19.jpg"><img src="/imagenes/im19.jpg" alt="ART6" width="200"></a>
+            <a href="../imagenes/im19.jpg"><img src="../imagenes/im19.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
