--- a/secciones/pijamas.html
+++ b/secciones/pijamas.html
@@ -43,42 +43,42 @@
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
     <main class="contenedor">
-        <h1 class="nuestros-productos">Conjuntos</h1>
+        <h1 class="nuestros-productos">Pijamas</h1>
     <!-- INICIO DE PRODUCTOS-->
     <!-- PIJAMAS -->
     <div class="producto">
         <div class="producto-blanco">
-            <a href="/imagenes/im20.jpg"><img src="/imagenes/im20.jpg" alt="ART1" width="200"></a>
+            <a href="../imagenes/im20.jpg"><img src="../imagenes/im20.jpg" alt="ART1" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im21.jpg"><img src="/imagenes/im21.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im21.jpg"><img src="../imagenes/im21.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im22.jpg"><img src="/imagenes/im22.jpg" alt="ART3" width="200"></a>
+            <a href="../imagenes/im22.jpg"><img src="../imagenes/im22.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im23.jpg"><img src="/imagenes/im23.jpg" alt="ART4" width="200"></a>
+            <a href="../imagenes/im23.jpg"><img src="../imagenes/im23.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im24.jpg"><img src="/imagenes/im24.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im24.jpg"><img src="../imagenes/im24.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im25.jpg"><img src="/imagenes/im25.jpg" alt="ART6" width="200"></a>
+            <a href="../imagenes/im25.jpg"><img src="../imagenes/im25.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
