--- a/secciones/ropainteriormasculina.html
+++ b/secciones/ropainteriormasculina.html
@@ -48,37 +48,37 @@
     <!-- ROPA INTERIOR MASCULINA -->
     <div class="producto">
         <div class="producto-blanco">
-            <a href="/imagenes/im7.jpg"><img src="/imagenes/im7.jpg" alt="ART1" width="200"></a>
+            <a href="../imagenes/im7.jpg"><img src="../imagenes/im7.jpg" alt="ART1" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im8.jpg"><img src="/imagenes/im8.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im8.jpg"><img src="../imagenes/im8.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im9.jpg"><img src="/imagenes/im9.jpg" alt="ART3" width="200"></a>
+            <a href="../imagenes/im9.jpg"><img src="../imagenes/im9.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im10.jpg"><img src="/imagenes/im10.jpg" alt="ART4" width="200"></a>
+            <a href="../imagenes/im10.jpg"><img src="../imagenes/im10.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im11.jpg"><img src="/imagenes/im11.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im11.jpg"><img src="../imagenes/im11.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/img12.jpg"><img src="/imagenes/img12.jpg" alt="ART6" width="200"></a>
+            <a href="../imagenes/img12.jpg"><img src="../imagenes/img12.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
