--- a/secciones/trajes-de-baño.html
+++ b/secciones/trajes-de-baño.html
@@ -43,42 +43,42 @@
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
     <main class="contenedor">
-        <h1 class="nuestros-productos">Conjuntos</h1>
+        <h1 class="nuestros-productos">Trajes de baño</h1>
     <!-- INICIO DE PRODUCTOS-->
     <!-- TRAJES DE BAÑO -->
     <div class="producto">
         <div class="producto-blanco">
-            <a href="/imagenes/im26.jpg"><img src="/imagenes/im26.jpg" alt="ART1" width="200"></a>
+            <a href="../imagenes/im26.jpg"><img src="../imagenes/im26.jpg" alt="ART1" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im27.jpg"><img src="/imagenes/im27.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im27.jpg"><img src="../imagenes/im27.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im28.jpg"><img src="/imagenes/im28.jpg" alt="ART3" width="200"></a>
+            <a href="../imagenes/im28.jpg"><img src="../imagenes/im28.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im29.jpg"><img src="/imagenes/im29.jpg" alt="ART4" width="200"></a>
+            <a href="../imagenes/im29.jpg"><img src="../imagenes/im29.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im30.jpg"><img src="/imagenes/im30.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im30.jpg"><img src="../imagenes/im30.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="/imagenes/im31.jpg"><img src="/imagenes/im31.jpg" alt="ART6" width="200"></a>
+            <a href="../imagenes/im31.jpg"><img src="../imagenes/im31.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
