--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- icon -->
+    <link rel= "shortcut icon" href="../imagenes/latinbomnlogo.ico" type="image/x-icon">
+    <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
+    <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
+    <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
+    <meta property="og:site_name" content="LatinBomb">
+    <meta property="og:type" content="website"> 
+    <meta property="og:locale" content="es_ES">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>LatinBomb | Indumentaria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
-
 </head>
 <body>
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="/imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -49,7 +56,7 @@
         <div class="producto">
             <div class="producto-blanco">
                 <a href="/secciones/lenceriafemenina.html">
-                    <img src="/imagenes/lenceria.png" alt="Lencería" width="200" id="lenceriafem">
+                    <img src="../imagenes/lenceria.png" alt="Lencería" width="200" id="lenceriafem">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -60,7 +67,7 @@
         <div class="producto">
             <div class="producto-blanco">
                 <a href="/secciones/ropainteriormasculina.html">
-                    <img src="/imagenes/masculino.png" alt="Ropa interior masculina" width="200">
+                    <img src="../imagenes/masculino.png" alt="Ropa interior masculina" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -71,7 +78,7 @@
         <div class="producto">
             <div class="producto-blanco">
                 <a href="/secciones/pijamas.html">
-                    <img src="/imagenes/pijamas.png" alt="Pijamas" width="200">
+                    <img src="../imagenes/pijamas.png" alt="Pijamas" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -81,7 +88,7 @@
     <!-- TRAJES DE BAÑO-->
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/trajes-de-baño.html"><img src="/imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
+                <a href="/secciones/trajes-de-baño.html"><img src="../imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
              </div>
             <div class="producto-informacion">
                 <p class="producto-nombre">Trajes de baño</p>
@@ -91,7 +98,7 @@
     </main>
     <!--- FIN DE SITIO PRINCIPAL-->
     <aside class="whats-container">
-        <div class="whats"> <a href="https://wa.me/1155956251"><img src="/imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
+        <div class="whats"> <a href="https://wa.me/1155956251"><img src="../imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
         </div>
      </aside>
     <!-- PIE DE PAGINA-->
