--- a/secciones/sale.html
+++ b/secciones/sale.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medios de Pago</title>
+    <title>Sale</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="/imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -41,7 +41,7 @@
     <!--- FIN DE ZONA NAVEGABLE-->
     <!--- INICIO DE CONTENEDOR PRINCIPAL-->
     <main class="contenedor">
-        <h1 class="nuestros-productos">Medios de Pago</h1>
+        <h1 class="nuestros-productos">Sale</h1>
     <div id="carouselWithIndicators" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
           <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="0" class="active"></li>
@@ -50,13 +50,13 @@
         </ol>
         <div class="carousel-inner w-70">
           <div class="carousel-item active">
-            <img src="/imagenes/mp.png" class="d-block w-100" alt="Mercado Pago">
+            <img src="../imagenes/sale50.jpg" class="d-block w-100" alt="50%OFF">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/tb.png" class="d-block w-100" alt="Transferencia">
+            <img src="../imagenes/sale40.jpg" class="d-block w-100" alt="40%OFF">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/efect.png" class="d-block w-100" alt="Efectivo">
+            <img src="../imagenes/sale30.jpg" class="d-block w-100" alt="30%OFF">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
