--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
