Arreglo de rutas - prueba en index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- icon -->
-    <link rel= "shortcut icon" href="../imagenes/latinbomnlogo.ico" type="image/x-icon">
+    <link rel= "shortcut icon" href="imagenes/latinbomnlogo.ico" type="image/x-icon">
     <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
     <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
     <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
@@ -37,10 +37,10 @@
           <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#"></a>
-              <a class="nav-link inicio" href="/index.html">Inicio</a>
-              <a class="nav-link mediosdepago" href="/secciones/mdp.html">Medios de pago</a>
-              <a class="nav-link sale" href="/secciones/sale.html">Sale</a>
-              <a class="nav-link nosotros" href="/secciones/nosotros.html">Nosotros</a>
+              <a class="nav-link inicio" href="index.html">Inicio</a>
+              <a class="nav-link mediosdepago" href="secciones/mdp.html">Medios de pago</a>
+              <a class="nav-link sale" href="secciones/sale.html">Sale</a>
+              <a class="nav-link nosotros" href="secciones/nosotros.html">Nosotros</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
             </div>
           </div>
@@ -55,8 +55,8 @@
     <div class="productos">
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/lenceriafemenina.html">
-                    <img src="../imagenes/lenceria.png" alt="Lencería" width="200" id="lenceriafem">
+                <a href="secciones/lenceriafemenina.html">
+                    <img src="imagenes/lenceria.png" alt="Lencería" width="200" id="lenceriafem">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -66,8 +66,8 @@
     <!-- ROPA INTERIOR MASCULINA-->
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/ropainteriormasculina.html">
-                    <img src="../imagenes/masculino.png" alt="Ropa interior masculina" width="200">
+                <a href="secciones/ropainteriormasculina.html">
+                    <img src="imagenes/masculino.png" alt="Ropa interior masculina" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -77,8 +77,8 @@
     <!-- PIJAMAS-->
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/pijamas.html">
-                    <img src="../imagenes/pijamas.png" alt="Pijamas" width="200">
+                <a href="secciones/pijamas.html">
+                    <img src="imagenes/pijamas.png" alt="Pijamas" width="200">
                 </a>
              </div>
             <div class="producto-informacion">
@@ -88,7 +88,7 @@
     <!-- TRAJES DE BAÑO-->
         <div class="producto">
             <div class="producto-blanco">
-                <a href="/secciones/trajes-de-baño.html"><img src="../imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
+                <a href="secciones/trajes-de-baño.html"><img src="imagenes/trajesdebaño.png" alt="Trajes de baño" width="200"></a>
              </div>
             <div class="producto-informacion">
                 <p class="producto-nombre">Trajes de baño</p>
@@ -98,7 +98,7 @@
     </main>
     <!--- FIN DE SITIO PRINCIPAL-->
     <aside class="whats-container">
-        <div class="whats"> <a href="https://wa.me/1155956251"><img src="../imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
+        <div class="whats"> <a href="https://wa.me/1155956251"><img src="imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
         </div>
      </aside>
     <!-- PIE DE PAGINA-->
