--- a/secciones/ropainteriormasculina.html
+++ b/secciones/ropainteriormasculina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel= "shortcut icon" href="imagenes/latinbomnlogo.ico" type="image/x-icon">
+    <link rel= "shortcut icon" href="../imagenes/latinbomnlogo.ico" type="image/x-icon">
     <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
     <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
     <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
@@ -13,13 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ropa interior Masculina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -37,10 +37,10 @@
               <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#"></a>
-                  <a class="nav-link inicio" href="index.html">Inicio</a>
-                  <a class="nav-link mediosdepago" href="secciones/mdp.html">Medios de pago</a>
-                  <a class="nav-link sale" href="secciones/sale.html">Sale</a>
-                  <a class="nav-link nosotros" href="secciones/nosotros.html">Nosotros</a>
+                  <a class="nav-link inicio" href="../index.html">Inicio</a>
+                  <a class="nav-link mediosdepago" href="../secciones/mdp.html">Medios de pago</a>
+                  <a class="nav-link sale" href="../secciones/sale.html">Sale</a>
+                  <a class="nav-link nosotros" href="../secciones/nosotros.html">Nosotros</a>
                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                 </div>
               </div>
@@ -55,37 +55,37 @@
     <!-- ROPA INTERIOR MASCULINA -->
     <div class="producto">
         <div class="producto-blanco">
-            <a href="imagenes/im7.jpg"><img src="imagenes/im7.jpg" alt="ART1" width="200"></a>
+            <a href="../imagenes/im7.jpg"><img src="../imagenes/im7.jpg" alt="ART1" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="imagenes/im8.jpg"><img src="imagenes/im8.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im8.jpg"><img src="../imagenes/im8.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="imagenes/im9.jpg"><img src="imagenes/im9.jpg" alt="ART3" width="200"></a>
+            <a href="../imagenes/im9.jpg"><img src="../imagenes/im9.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="imagenes/im10.jpg"><img src="imagenes/im10.jpg" alt="ART4" width="200"></a>
+            <a href="../imagenes/im10.jpg"><img src="../imagenes/im10.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="imagenes/im11.jpg"><img src="imagenes/im11.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im11.jpg"><img src="../imagenes/im11.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="imagenes/img12.jpg"><img src="imagenes/img12.jpg" alt="ART6" width="200"></a>
+            <a href="../imagenes/img12.jpg"><img src="../imagenes/img12.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
