--- a/secciones/sale.html
+++ b/secciones/sale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel= "shortcut icon" href="imagenes/latinbomnlogo.ico" type="image/x-icon">
+    <link rel= "shortcut icon" href="../imagenes/latinbomnlogo.ico" type="image/x-icon">
     <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
     <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
     <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
@@ -13,13 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sale</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#"></a>
-            <a class="nav-link inicio" href="index.html">Inicio</a>
-            <a class="nav-link mediosdepago" href="secciones/mdp.html">Medios de pago</a>
-            <a class="nav-link sale" href="secciones/sale.html">Sale</a>
-            <a class="nav-link nosotros" href="secciones/nosotros.html">Nosotros</a>
+            <a class="nav-link inicio" href="../index.html">Inicio</a>
+            <a class="nav-link mediosdepago" href="../secciones/mdp.html">Medios de pago</a>
+            <a class="nav-link sale" href="../secciones/sale.html">Sale</a>
+            <a class="nav-link nosotros" href="../secciones/nosotros.html">Nosotros</a>
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
           </div>
         </div>
@@ -57,13 +57,13 @@
         </ol>
         <div class="carousel-inner w-70">
           <div class="carousel-item active">
-            <img src="imagenes/sale50.jpg" class="d-block w-100" alt="50%OFF">
+            <img src="../imagenes/sale50.jpg" class="d-block w-100" alt="50%OFF">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/sale40.jpg" class="d-block w-100" alt="40%OFF">
+            <img src="../imagenes/sale40.jpg" class="d-block w-100" alt="40%OFF">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/sale30.jpg" class="d-block w-100" alt="30%OFF">
+            <img src="../imagenes/sale30.jpg" class="d-block w-100" alt="30%OFF">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
