--- a/secciones/ropainteriormasculina.html
+++ b/secciones/ropainteriormasculina.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel= "shortcut icon" href="../imagenes/latinbomnlogo.ico" type="image/x-icon">
-    <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
-    <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
-    <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
-    <meta property="og:site_name" content="LatinBomb">
-    <meta property="og:type" content="website"> 
-    <meta property="og:locale" content="es_ES">
+    <link rel= "shortcut icon" href="imagenes/latinbomnlogo.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
